examenes/2017Q2 - 2do parcial/Zamorano/firewall.conf
# Generated by iptables-save v1.4.21 on Wed Nov 15 22:21:12 2017
*nat
:PREROUTING ACCEPT [24084:4451783]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [276:85388]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -d 192.168.20.0/24 -j ACCEPT
-A PREROUTING -d 192.168.20.3/32 -j ACCEPT
-A POSTROUTING -s 192.168.20.0/24 -p tcp -m tcp --dport 80 -j ACCEPT
-A POSTROUTING -d 192.168.20.0/24 -p udp -m udp --dport 80 -j ACCEPT
-A POSTROUTING -s 192.168.20.3/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A POSTROUTING -d 192.168.20.0/24 -p udp -m udp --dport 80 -j ACCEPT
-A POSTROUTING -d 192.168.20.3/32 -p udp -m udp --dport 80 -j ACCEPT
COMMIT
# Completed on Wed Nov 15 22:21:12 2017
# Generated by iptables-save v1.4.21 on Wed Nov 15 22:21:12 2017
*filter
:INPUT DROP [25073:4584906]
:FORWARD DROP [0:0]
:OUTPUT DROP [290:88952]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.20.8/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed on Wed Nov 15 22:21:12 2017
